# machine_learning_applications

./: .gitignore  LICENSE  README.md  demos.xml  install_extension.sh  machine_learning_applications.slce  machine_learning_applications.slsdkext  templates.xml
application/imu/ble_magic_wand/: accelerometer.cc  accelerometer.h  app.c  app.h  ble_magic_wand.slcp  bluetooth.c  bluetooth.h  config.h  magic_wand.cc  magic_wand.h  main.c  readme.md
application/imu/ble_magic_wand/config/btconf/: gatt_configuration.btconf
application/imu/ble_magic_wand/config/tflite/: model_quantized.tflite
application/imu/imu_anomaly_detection/: README.md  accelerometer.c  accelerometer.h  app.c  app.h  imu_anomaly_detection.slcp  main.c
application/imu/imu_anomaly_detection/scripts/: display_serial.py  requirements.txt
application/vision/people_flow_counter_mlx90640/: .gitignore  README.md  bluetooth.c  people_counting.cc  people_counting.h  people_flow_counter_mlx90640.slcp
application/vision/people_flow_counter_mlx90640/config/btconf/: gatt_configuration.btconf
application/vision/people_flow_counter_mlx90640/config/tflite/: model_quantized.tflite
application/vision/people_flow_counter_mlx90640/image_utils/: image_utils.cc  image_utils.h
application/vision/people_flow_counter_mlx90640/misc/: display_serial_ble_server.py  display_serial_core.py  display_serial_local.py
application/vision/people_flow_counter_mlx90640/mlx90640/: mlx90640.c  mlx90640_i2c.c  mlx90640_i2c.h
application/voice/: README.md
application/voice/keyword_spotting/model/: keyword_spotting_on_off.py
application/voice/sensory_wakeupword/: README.md
application/voice/sensory_wakeupword/app/: .gitignore  sensory_wakeupword_series_1.slcp  sensory_wakeupword_series_2.slcp
application/voice/sensory_wakeupword/app/include/model/go_silabs/: search.h
component/htm/: README.md  htm.slcc
component/htm/inc/: sl_htm.h  sl_htm_encoder.h  sl_htm_sdr.h  sl_htm_sp.h  sl_htm_tm.h  sl_htm_tm_cell.h  sl_htm_tm_column.h  sl_htm_tm_segment.h  sl_htm_tm_synapse.h  sl_htm_tm_types.h  sl_htm_utils.h
component/htm/src/: sl_htm.c  sl_htm_encoder.c  sl_htm_sdr.c  sl_htm_sp.c  sl_htm_tm.c  sl_htm_tm_cell.c  sl_htm_tm_column.c  sl_htm_tm_segment.c  sl_htm_tm_synapse.c  sl_htm_tm_types.c  sl_htm_utils.c
component/libfort/: fort.h  libfort.slcc
component/vision/: README.md  vision.slcc
component/vision/inc/: sl_vision.h  sl_vision_centroid.hpp  sl_vision_image.hpp
component/vision/src/: sl_vision_bbox.cc  sl_vision_image.cc
component/vision_frontend/: vision_frontend.slcc
component/vision_frontend/inc/: bboxes.h  bboxes.hpp  centroids.h  centroids.hpp  histogram.h  image_utils.h  image_utils.hpp  sl_vision_bbox.h  sl_vision_bbox.hpp  sl_vision_centroid.h  sl_vision_centroid.hpp  sl_vision_histogram.h  sl_vision_image.h  sl_vision_image.hpp  vision_frontend.h
component/vision_frontend/src/: bboxes.cc  centroids.cc  histogram.cc  image_utils.cc  sl_vision_bbox.cc  sl_vision_centroid.cc  sl_vision_histogram.cc  sl_vision_image.cc
tests/: CMakeLists.txt  run.sh
tests/application/: CMakeLists.txt
tests/cmake/: add_slcp_project.cmake  import_googletest.cmake  install_extension.cmake
tests/component/: CMakeLists.txt
tests/component/htm/: CMakeLists.txt  test_encoder.cc  test_htm.cc  test_sdr.cc  test_sp.cc  test_tm.cc
tests/component/vision/: CMakeLists.txt  test_histogram.cc  test_image.cc
tests/component/vision_frontend/: CMakeLists.txt  test_bboxes.cc  test_centroids.cc  test_histogram.cc  test_image.cc  test_image_utils.cc
vision/people_flow_counter_mlx90640/: .gitignore  README.md  app.c  bluetooth.h  main.c  people_counting.cc  people_counting.h  people_flow_counter_mlx90640.slcp
vision/people_flow_counter_mlx90640/config/tflite/: model_quantized_old.tflite
vision/people_flow_counter_mlx90640/image_utils/: .gitignore  image_utils.cc  image_utils.h  serial_to_image.py
vision/people_flow_counter_mlx90640/misc/: display_serial_ble.py  display_serial_ble_server.py  display_serial_core.py  display_serial_local.py  display_serial_remote.py  requirements.txt
vision/people_flow_counter_mlx90640/mlx90640/: mlx90640.c  mlx90640.h
voice/: README.md
voice/keyword_spotting/: README.md
voice/keyword_spotting/model/: keyword_spotting_on_off.py  keyword_spotting_on_off_v2.py
voice/sensory_wakeupword/: LICENSE  README.md
voice/sensory_wakeupword/app/: app.c  sensory_wakeupword.slcp  sensory_wakeupword_series_1.slcp  sensory_wakeupword_series_2.slcp
voice/sensory_wakeupword/app/include/: sensory.h
voice/sensory_wakeupword/app/include/model/go_silabs/: command.h  net.h  search.h
voice/sensory_wakeupword/app/include/model/hello_gecko/: command.h  net.h  search.h
voice/sensory_wakeupword/app/include/model/hello_gecko_small/: net.h  search.h
voice/sensory_wakeupword/app/include/model/voice_genie/: command.h  net.h  search.h
voice/sensory_wakeupword/app/include/model/voice_genie_small/: command.h  net.h  search.h
voice/sensory_wakeupword/scripts/: add_model.py
(+2 files in other folders)
